@@ -16,181 +16,162 @@ CIAO::DDS4CCM::CCM_DataReader::~CCM_DataReader (void)
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::enable (void)
 {
-  return this->impl ()->enable ();
+  return this->dds_entity ()->enable ();
 }
 
 ::DDS::StatusCondition_ptr
 CIAO::DDS4CCM::CCM_DataReader::get_statuscondition (void)
 {
-  return this->impl ()->get_statuscondition ();
+  return this->dds_entity ()->get_statuscondition ();
 }
 
 ::DDS::StatusMask
 CIAO::DDS4CCM::CCM_DataReader::get_status_changes (void)
 {
-  return this->impl ()->get_status_changes ();
+  return this->dds_entity ()->get_status_changes ();
 }
 
 ::DDS::InstanceHandle_t
 CIAO::DDS4CCM::CCM_DataReader::get_instance_handle (void)
 {
-  return this->impl ()->get_instance_handle ();
+  return this->dds_entity ()->get_instance_handle ();
 }
 
 ::DDS::ReadCondition_ptr
 CIAO::DDS4CCM::CCM_DataReader::create_readcondition (
-  ::DDS::SampleStateMask /*sample_states*/,
-  ::DDS::ViewStateMask /*view_states*/,
-  ::DDS::InstanceStateMask /*instance_states*/)
+  ::DDS::SampleStateMask sample_states,
+  ::DDS::ViewStateMask view_states,
+  ::DDS::InstanceStateMask instance_states)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::ReadCondition::_nil ();
+  return this->dds_entity ()->create_readcondition (sample_states, view_states, instance_states);
 }
 
 ::DDS::QueryCondition_ptr
 CIAO::DDS4CCM::CCM_DataReader::create_querycondition (
-  ::DDS::SampleStateMask /*sample_states*/,
-  ::DDS::ViewStateMask /*view_states*/,
-  ::DDS::InstanceStateMask /*instance_states*/,
-  const char * /*query_expression*/,
-  const ::DDS::StringSeq & /*query_parameters*/)
+  ::DDS::SampleStateMask sample_states,
+  ::DDS::ViewStateMask view_states,
+  ::DDS::InstanceStateMask instance_states,
+  const char * query_expression,
+  const ::DDS::StringSeq & query_parameters)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::QueryCondition::_nil ();
+  return this->dds_entity ()->create_querycondition (sample_states, view_states, instance_states, query_expression, query_parameters);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::delete_readcondition (
-  ::DDS::ReadCondition_ptr /*a_condition*/)
+  ::DDS::ReadCondition_ptr a_condition)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->delete_readcondition (a_condition);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::delete_contained_entities (void)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->delete_contained_entities ();
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::set_qos (
-  const ::DDS::DataReaderQos & /*qos*/)
+  const ::DDS::DataReaderQos & qos)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->set_qos (qos);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_qos (
-  ::DDS::DataReaderQos & /*qos*/)
+  ::DDS::DataReaderQos & qos)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_qos (qos);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::set_listener (
-  ::DDS::DataReaderListener_ptr /*a_listener*/,
-  ::DDS::StatusMask /*mask*/)
+  ::DDS::DataReaderListener_ptr a_listener,
+  ::DDS::StatusMask mask)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->set_listener (a_listener, mask);
 }
 
 ::DDS::DataReaderListener_ptr
 CIAO::DDS4CCM::CCM_DataReader::get_listener (void)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::DataReaderListener::_nil ();
+  return this->dds_entity ()->get_listener ();
 }
 
 ::DDS::TopicDescription_ptr
 CIAO::DDS4CCM::CCM_DataReader::get_topicdescription (void)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::TopicDescription::_nil ();
+  return this->dds_entity ()->get_topicdescription();
 }
 
 ::DDS::Subscriber_ptr
 CIAO::DDS4CCM::CCM_DataReader::get_subscriber (void)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::Subscriber::_nil ();
+  return this->dds_entity ()->get_subscriber ();
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_sample_rejected_status (
-  ::DDS::SampleRejectedStatus & /*status*/)
+  ::DDS::SampleRejectedStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->get_dds_entity ()->get_sample_rejected_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_liveliness_changed_status (
-  ::DDS::LivelinessChangedStatus & /*status*/)
+  ::DDS::LivelinessChangedStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_liveliness_changed_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_requested_deadline_missed_status (
-  ::DDS::RequestedDeadlineMissedStatus & /*status*/)
+  ::DDS::RequestedDeadlineMissedStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_requested_deadline_missed_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_requested_incompatible_qos_status (
-  ::DDS::RequestedIncompatibleQosStatus & /*status*/)
+  ::DDS::RequestedIncompatibleQosStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_requested_incompatible_qos_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_subscription_matched_status (
-  ::DDS::SubscriptionMatchedStatus & /*status*/)
+  ::DDS::SubscriptionMatchedStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_subscription_matched_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_sample_lost_status (
-  ::DDS::SampleLostStatus & /*status*/)
+  ::DDS::SampleLostStatus & status)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_sample_lost_status (status);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::wait_for_historical_data (
-  const ::DDS::Duration_t & /*max_wait*/)
+  const ::DDS::Duration_t & max_wait)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->wait_for_historical_data (max_wait);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_matched_publications (
-  ::DDS::InstanceHandleSeq & /*publication_handles*/)
+  ::DDS::InstanceHandleSeq & publication_handles)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_matched_publications (publication_handles);
 }
 
 ::DDS::ReturnCode_t
 CIAO::DDS4CCM::CCM_DataReader::get_matched_publication_data (
-  ::DDS::PublicationBuiltinTopicData & /*publication_data*/,
-  const ::DDS::InstanceHandle_t & /*publication_handle*/)
+  ::DDS::PublicationBuiltinTopicData & publication_data,
+  const ::DDS::InstanceHandle_t & publication_handle)
 {
-  throw ::CORBA::NO_IMPLEMENT ();
-  return ::DDS::RETCODE_OK;
+  return this->dds_entity ()->get_matched_publication_data (publication_data, publication_handle);
 }
 
 
@@ -198,7 +179,7 @@ void
 CIAO::DDS4CCM::CCM_DataReader::set_dds_entity (::DDS::DataReader_ptr dr)
 {
   DDS4CCM_TRACE ("CIAO::DDS4CCM::CCM_DataReader::set_dds_entity");
-  this->impl_ = ::DDS::DataReader::_duplicate (dr);
+  this->dds_entity_ = ::DDS::DataReader::_duplicate (dr);
 }
 
 ::DDS::DataReader_ptr
@@ -206,23 +187,23 @@ CIAO::DDS4CCM::CCM_DataReader::get_dds_entity (void)
 {
   DDS4CCM_TRACE ("CIAO::DDS4CCM::CCM_DataReader::get_dds_entity");
 
-  return ::DDS::DataReader::_duplicate (this->impl ());
+  return ::DDS::DataReader::_duplicate (this->dds_entity ());
 }
 
 ::DDS::DataReader_ptr
-CIAO::DDS4CCM::CCM_DataReader::impl (void)
+CIAO::DDS4CCM::CCM_DataReader::dds_entity (void)
 {
-  DDS4CCM_TRACE ("CIAO::DDS4CCM::CCM_DataReader::impl");
+  DDS4CCM_TRACE ("CIAO::DDS4CCM::CCM_DataReader::dds_entity");
 
-  if (::CORBA::is_nil (this->impl_.in ()))
+  if (::CORBA::is_nil (this->dds_entity_.in ()))
     {
       DDS4CCM_DEBUG (DDS4CCM_LOG_LEVEL_ACTION, (LM_DEBUG,
-                    "CIAO::DDS4CCM::CCM_DataReader::impl - "
+                    "CIAO::DDS4CCM::CCM_DataReader::dds_entity - "
                     "Throwing BAD_INV_ORDER.\n"));
       throw ::CORBA::BAD_INV_ORDER ();
     }
   else
     {
-      return this->impl_.in ();
+      return this->dds_entity_.in ();
     }
 }
